--- a/_sass/_config.scss
+++ b/_sass/_config.scss
@@ -25,9 +25,9 @@ $grey:   #aaa;
 $black:  #111;
 
 // Color variables
-$primary-color: seagreen;
-$secondary-color: #233E5B;
-$tertiary-color: #aaa;
+$primary-color: #642D5A;
+$secondary-color: #A5D8FF;
+$tertiary-color: #AFD0D6;
 $link-color: $primary-color;
 $background-color: $primary-color;
 
