--- a/_includes/head.html
+++ b/_includes/head.html
@@ -74,6 +74,8 @@
 
 	<!-- Stylesheet -->
 	<link rel="stylesheet" href="/assets/css/style.css" />
+  <!-- FontAwesome I Guess -->
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
 	<!-- Canonical URL -->
 	<link
