--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,8 @@ layout: default
   {%- endif -%}
   <header>
     <h1 class="postTitle">{{ page.title }}</h1>
-    <p class="meta">{{ page.date | date: '%B %d, %Y' }} | <span class="time">{{ page.content | number_of_words | divided_by:180 }}</span> Minute Read</p>
+    <p class="meta">{{ page.stars | default: 0 | star_rating }}</p>
+    <p class="meta">{{page.author }} | Read on {{ page.date | date: '%B %d, %Y' }}</p>
   </header>
 
   {{ content }}
