--- a/_includes/head.html
+++ b/_includes/head.html
@@ -66,7 +66,7 @@
 	{%- endif -%}
 
 	<!-- Favicon -->
-	<link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico" />
+	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
 	<!-- Come and get me RSS readers -->
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}"
