--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -22,18 +22,13 @@ title: Nolan Can Read
 </div>
 <!-- Pagination links -->
 <div class="pagination">
-  {%- if page.paginator.previous_page -%}
-  <a
-    href="{{ page.paginator.previous_page_path }}"
-    class="previous button__outline"
-    >Newer Posts</a
-  >
-  {%- endif -%} 
-  <span class="page-number">
-    {{ page.paginator.page }} / {{ page.paginator.total_pages }}
-  </span>{%- if page.paginator.next_page -%}
-  <a href="{{ page.paginator.next_page_path }}" class="next button__outline"
-    >Older Posts</a
-  >
-  {%- endif -%}
+  {%- for link in page.paginator.page_links -%}
+    {%- if link == "..." -%}
+      <span>...</span>
+    {%- elsif link.current -%}
+      <span>{{ link.current }}</span>
+    {%- else -%}
+      <a href="{{ link.url }}">{{ link.label }}</a>
+    {%- endif -%}
+  {%- endfor -%}
 </div>
