--- a/_sass/breakpoints/_mobileup.scss
+++ b/_sass/breakpoints/_mobileup.scss
@@ -468,13 +468,10 @@ PAGINATION STYLING
 ***************/
 
 .pagination {
-	.next {
-		float: left;
-	}
-
-	.previous {
-		float: right;
-	}
+  text-align: center;
+  span, a {
+    margin: 0 0.5rem;
+  }
 }
 
 /***************
