--- a/_sass/breakpoints/_mobileup.scss
+++ b/_sass/breakpoints/_mobileup.scss
@@ -3,38 +3,38 @@ GLOBAL STYLES
 ***************/
 
 html {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 *,
 *:before,
 *:after {
-	box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 body {
-	font-family: $serif;
-	line-height: 1.75;
-	font-size: 112.5%; // 18px base font size
-	color: $black;
-	overflow-x: hidden;
-	margin: 0;
+  font-family: $serif;
+  line-height: 1.75;
+  font-size: 112.5%; // 18px base font size
+  color: $black;
+  overflow-x: hidden;
+  margin: 0;
 
-	p,
-	ul {
-		margin: 0 0 2rem;
-	}
+  p,
+  ul {
+    margin: 0 0 2rem;
+  }
 }
 
 // Text Selection Styling
 ::-moz-selection {
-	background: $primary-color;
-	color: white;
+  background: $primary-color;
+  color: white;
 }
 
 ::selection {
-	background: $primary-color;
-	color: white;
+  background: $primary-color;
+  color: white;
 }
 
 // Media Styling
@@ -43,15 +43,15 @@ video,
 audio,
 iframe,
 object {
-	max-width: 100%;
+  max-width: 100%;
 }
 
 // Layout
 .container {
-	max-width: 610px;
-	padding: 0 20px;
-	margin-left: auto;
-	margin-right: auto;
+  max-width: 610px;
+  padding: 0 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #jekyll-mapping {
@@ -63,11 +63,11 @@ LINK STYLING
 ***************/
 
 a {
-	color: $link-color;
+  color: $link-color;
 
-	&:hover {
-		color: darken($link-color, 15%);
-	}
+  &:hover {
+    color: darken($link-color, 15%);
+  }
 }
 
 /***************
@@ -75,70 +75,70 @@ MENU STYLING
 ***************/
 
 .nav-collapse {
-	z-index: 1;
+  z-index: 1;
 
-	ul {
-		margin: 0;
-		padding: 0;
-		width: 100%;
-		display: block;
-		list-style: none;
+  ul {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    display: block;
+    list-style: none;
 
-		li {
-			width: 100%;
-			display: block;
-			background: $background-color;
-			border-bottom: 2px solid lighten($background-color, 5%);
+    li {
+      width: 100%;
+      display: block;
+      background: $background-color;
+      border-bottom: 2px solid lighten($background-color, 5%);
 
-			a {
-				color: white;
-				text-decoration: none;
-				display: block;
-				padding: 5px 2rem;
-			}
-		}
-	}
+      a {
+        color: white;
+        text-decoration: none;
+        display: block;
+        padding: 5px 2rem;
+      }
+    }
+  }
 }
 
 .js .nav-collapse {
-	clip: rect(0 0 0 0);
-	max-height: 0;
-	position: absolute;
-	display: block;
-	overflow: hidden;
-	zoom: 1;
-	clear: both;
-	width: 100%;
+  clip: rect(0 0 0 0);
+  max-height: 0;
+  position: absolute;
+  display: block;
+  overflow: hidden;
+  zoom: 1;
+  clear: both;
+  width: 100%;
 }
 
 .nav-collapse.opened {
-	max-height: 9999px;
+  max-height: 9999px;
 }
 
 .nav-toggle {
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	-o-user-select: none;
-	user-select: none;
-	float: right;
-	line-height: 2em;
-	margin-top: 0.5em;
-	background-color: $background-color;
-	border-radius: 4px;
-	padding: 0 0.5em;
-	color: white;
-	text-decoration: none;
-	position: relative;
-	right: 2rem;
-	transition: all 0.2s ease-in-out;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  float: right;
+  line-height: 2em;
+  margin-top: 0.5em;
+  background-color: $background-color;
+  border-radius: 4px;
+  padding: 0 0.5em;
+  color: white;
+  text-decoration: none;
+  position: relative;
+  right: 2rem;
+  transition: all 0.2s ease-in-out;
 
-	&:hover {
-		color: white;
-		background-color: darken($background-color, 10%);
-	}
+  &:hover {
+    color: white;
+    background-color: darken($background-color, 10%);
+  }
 }
 
 /***************
@@ -146,37 +146,110 @@ LIST STYLING
 ***************/
 
 .noList {
-	list-style: none;
-	padding-left: 0;
-	margin-left: 0;
+  list-style: none;
+  padding-left: 0;
+  margin-left: 0;
 }
 
 dt {
-	font-weight: bold;
+  font-weight: bold;
 }
 
 dd {
-	margin: 0 0 1.5rem;
+  margin: 0 0 1.5rem;
 }
 
 .post ul ul,
 .post ul ol,
 .post ol ul,
 .post ol ol {
-	margin: 0;
+  margin: 0;
 }
 
+.tree {
+  --spacing: 1.5rem;
+  --radius: 0.6rem;
+  li {
+    display: block;
+    position: relative;
+    padding-left: calc(2 * var(--spacing) - var(--radius) - 2px);
+  }
+  ul {
+    margin-left: calc(var(--radius) - var(--spacing));
+    padding-left: 0;
+    li {
+      border-left: 2px solid #ddd;
+      &:last-child {
+        border-color: transparent;
+      }
+      &::before {
+        content: "";
+        display: block;
+        position: absolute;
+        top: calc(var(--spacing) / -2);
+        left: -2px;
+        width: calc(var(--spacing) + 2px);
+        height: calc(var(--spacing) + 1px);
+        border: solid #ddd;
+        border-width: 0 0 2px 2px;
+      }
+    }
+  }
+  summary {
+    display: block;
+    cursor: pointer;
+    &:focus {
+      outline: none;
+    }
+    &:focus-visible {
+      outline: 1px dotted #000;
+    }
+    &::marker,
+    &::-webkit-details-marker {
+      display: none;
+    }
+    &::before {
+      z-index: 1;
+      content: "";
+    }
+  }
+  & li::after,
+  & summary::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: calc(var(--spacing) / 2 - var(--radius));
+    left: calc(var(--spacing) - var(--radius) - 1px);
+    width: calc(2 * var(--radius));
+    height: calc(2 * var(--radius));
+    border-radius: 50%;
+    background: #ddd;
+  }
+  summary::before {
+    z-index: 1;
+    background: $primary-color;
+    content: "+";
+    line-height: calc(2 * var(--radius));
+    text-align: center;
+    color: white;
+  }
+
+  details[open] > summary::before {
+    content: "-";
+    line-height: 1rem;
+  }
+}
 /***************
 PAGE STYLES
 ***************/
 
 .pageTitle {
-	margin: 2rem auto 1em;
-	text-align: center;
+  margin: 2rem auto 1em;
+  text-align: center;
 }
 
 .content {
-	padding-top: 1em;
+  padding-top: 1em;
 }
 
 /***************
@@ -184,13 +257,13 @@ HEADER STYLING
 ***************/
 
 .header {
-	background-color: $background-color;
-	background-image: url("../img/bookshelf.jpg");
-	background-size: cover;
-	background-position: center center;
-	color: white;
-	padding: 0;
-	height: 3em;
+  background-color: $background-color;
+  background-image: url("../img/bookshelf.jpg");
+  background-size: cover;
+  background-position: center center;
+  color: white;
+  padding: 0;
+  height: 3em;
 
   &::before {
     content: "";
@@ -208,27 +281,27 @@ HEADER STYLING
     // filter: blur(2px) sepia(1) saturate(1.4) brightness(0.7) hue-rotate(-100deg);
   }
 
-	.container {
-		max-width: 100%;
+  .container {
+    max-width: 100%;
     padding: 0;
-	}
+  }
 
-	h1 {
-		margin: 0;
-		float: left;
-		padding-left: 2rem;
-		font-size: 1em;
-		line-height: 3em;
-		font-family: $sans-serif;
-		font-weight: 800;
-		text-transform: uppercase;
+  h1 {
+    margin: 0;
+    float: left;
+    padding-left: 2rem;
+    font-size: 1em;
+    line-height: 3em;
+    font-family: $sans-serif;
+    font-weight: 800;
+    text-transform: uppercase;
     position: absolute;
 
-		a {
-			color: white;
-			text-decoration: none;
-		}
-	}
+    a {
+      color: white;
+      text-decoration: none;
+    }
+  }
 }
 
 /***************
@@ -236,87 +309,87 @@ POST STYLING
 ***************/
 
 .post {
-	.postTitle {
-		text-align: center;
-		margin-top: 2rem;
-		margin-bottom: 1rem;
-	}
+  .postTitle {
+    text-align: center;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+  }
 
-	blockquote {
-		clear: both;
-		margin: 2.5em 0;
-		padding: 0;
-		line-height: 1.8;
-		position: relative;
+  blockquote {
+    clear: both;
+    margin: 2.5em 0;
+    padding: 0;
+    line-height: 1.8;
+    position: relative;
 
-		&:before {
-			content: "";
-			position: absolute;
-			top: -1.25em;
-			background: $background-color;
-			display: block;
-			height: 2px;
-			width: 150px;
-			left: calc(50% - 75px);
-		}
+    &:before {
+      content: "";
+      position: absolute;
+      top: -1.25em;
+      background: $background-color;
+      display: block;
+      height: 2px;
+      width: 150px;
+      left: calc(50% - 75px);
+    }
 
-		&:after {
-			content: "";
-			position: absolute;
-			bottom: -1.25em;
-			background: $background-color;
-			display: block;
-			height: 2px;
-			width: 150px;
-			left: calc(50% - 75px);
-		}
-	}
+    &:after {
+      content: "";
+      position: absolute;
+      bottom: -1.25em;
+      background: $background-color;
+      display: block;
+      height: 2px;
+      width: 150px;
+      left: calc(50% - 75px);
+    }
+  }
 
-	.meta {
-		text-align: center;
-		color: lighten(black, 50%);
-		font-family: $sans-serif;
-		font-weight: 300;
-	}
+  .meta {
+    text-align: center;
+    color: lighten(black, 50%);
+    font-family: $sans-serif;
+    font-weight: 300;
+  }
 
-	figure {
-		margin: 3rem 0;
+  figure {
+    margin: 3rem 0;
 
-		figcaption {
-			text-align: center;
-			font-size: 0.9em;
-			font-style: italic;
-			color: lighten($black, 30%);
-		}
+    figcaption {
+      text-align: center;
+      font-size: 0.9em;
+      font-style: italic;
+      color: lighten($black, 30%);
+    }
 
-		img {
-			margin: 0 auto;
-			display: block;
-		}
-	}
+    img {
+      margin: 0 auto;
+      display: block;
+    }
+  }
 
-	img {
-		margin-bottom: 2rem;
-	}
+  img {
+    margin-bottom: 2rem;
+  }
 
-	.highlight {
-		clear: both;
-		margin-bottom: 2rem;
-	}
+  .highlight {
+    clear: both;
+    margin-bottom: 2rem;
+  }
 
-	.dropcap {
-		color: $primary-color;
-		margin-right: 0.45rem;
-	}
+  .dropcap {
+    color: $primary-color;
+    margin-right: 0.45rem;
+  }
 
-	.featuredImage {
-		position: relative;
-		margin-top: 2rem;
+  .featuredImage {
+    position: relative;
+    margin-top: 2rem;
 
-		img {
-			margin-bottom: 0;
-		}
-	}
+    img {
+      margin-bottom: 0;
+    }
+  }
 }
 
 /***************
@@ -324,72 +397,72 @@ POST NAV STYLING
 ***************/
 
 .postNav {
-	border-top: 1px solid darken(white, 10%);
-	border-bottom: 1px solid darken(white, 10%);
-	overflow: hidden;
+  border-top: 1px solid darken(white, 10%);
+  border-bottom: 1px solid darken(white, 10%);
+  overflow: hidden;
 
-	.prev,
-	.next {
-		display: block;
-		width: 100%;
-		height: 5rem;
-		overflow: hidden;
-		position: relative;
-		font-family: $sans-serif;
-		font-weight: 800;
-		font-size: 0.9em;
-		text-transform: uppercase;
-		text-align: center;
+  .prev,
+  .next {
+    display: block;
+    width: 100%;
+    height: 5rem;
+    overflow: hidden;
+    position: relative;
+    font-family: $sans-serif;
+    font-weight: 800;
+    font-size: 0.9em;
+    text-transform: uppercase;
+    text-align: center;
 
-		img {
-			z-index: 1;
-			display: block;
-			position: absolute;
-			top: 50%;
-			transform: translateY(-50%);
-			left: 0;
-			width: 100%;
-			height: auto;
-		}
+    img {
+      z-index: 1;
+      display: block;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      left: 0;
+      width: 100%;
+      height: auto;
+    }
 
-		span {
-			z-index: 10;
-			position: relative;
-			padding: 0.5rem;
-			position: absolute;
-			top: 50%;
-			transform: translateY(-50%);
-			width: 100%;
-			line-height: 1.4;
-		}
+    span {
+      z-index: 10;
+      position: relative;
+      padding: 0.5rem;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 100%;
+      line-height: 1.4;
+    }
 
-		&.image {
-			text-decoration: none;
-			color: white;
-			text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8);
-			padding: 0 0.5rem;
-			position: relative;
-			transition: all 0.2s ease-in-out;
-		}
+    &.image {
+      text-decoration: none;
+      color: white;
+      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8);
+      padding: 0 0.5rem;
+      position: relative;
+      transition: all 0.2s ease-in-out;
+    }
 
-		&:hover {
-			&.image {
-				opacity: 0.8;
-			}
-		}
-	}
+    &:hover {
+      &.image {
+        opacity: 0.8;
+      }
+    }
+  }
 
-	.prev {
-		span {
-			left: 0;
-		}
-	}
+  .prev {
+    span {
+      left: 0;
+    }
+  }
 
-	.next {
-		span {
-			right: 0;
-		}
-	}
+  .next {
+    span {
+      right: 0;
+    }
+  }
 }
 
 /***************
@@ -397,70 +470,70 @@ FOOTER STYLING
 ***************/
 
 .footer {
-	text-align: center;
-	padding: 2rem 0;
-	clear: both;
+  text-align: center;
+  padding: 2rem 0;
+  clear: both;
 
-	.container {
-		border-top: 4px solid darken(white, 15%);
-		padding-top: 0.5em;
-		max-width: 90%;
-	}
+  .container {
+    border-top: 4px solid darken(white, 15%);
+    padding-top: 0.5em;
+    max-width: 90%;
+  }
 
-	.copy,
-	.footer-links {
-		font-size: 0.8em;
-	}
+  .copy,
+  .footer-links {
+    font-size: 0.8em;
+  }
 
-	.copy {
-		margin-bottom: 1rem;
-	}
+  .copy {
+    margin-bottom: 1rem;
+  }
 
-	&-links {
-		ul {
-			text-align: center;
+  &-links {
+    ul {
+      text-align: center;
 
-			li {
-				display: inline-block;
-				margin-right: 8px;
+      li {
+        display: inline-block;
+        margin-right: 8px;
 
-				&:last-child {
-					margin-right: 0;
-				}
+        &:last-child {
+          margin-right: 0;
+        }
 
-				a {
-					display: inline-block;
-					width: 30px;
-					height: 30px;
-					transition: all 0.2s ease-in-out;
+        a {
+          display: inline-block;
+          width: 30px;
+          height: 30px;
+          transition: all 0.2s ease-in-out;
 
-					svg {
-						display: block;
-						width: 100%;
-						height: 100%;
+          svg {
+            display: block;
+            width: 100%;
+            height: 100%;
 
-						.outer-shape {
-							fill: $primary-color;
-						}
+            .outer-shape {
+              fill: $primary-color;
+            }
 
-						.inner-shape {
-							fill: white;
-						}
-					}
-				}
+            .inner-shape {
+              fill: white;
+            }
+          }
+        }
 
-				&:hover {
-					a {
-						svg {
-							.outer-shape {
-								fill: darken($primary-color, 10%);
-							}
-						}
-					}
-				}
-			}
-		}
-	}
+        &:hover {
+          a {
+            svg {
+              .outer-shape {
+                fill: darken($primary-color, 10%);
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
 /***************
@@ -469,7 +542,8 @@ PAGINATION STYLING
 
 .pagination {
   text-align: center;
-  span, a {
+  span,
+  a {
     margin: 0 0.5rem;
   }
 }
@@ -479,47 +553,47 @@ POST LIST STYLING
 ***************/
 
 .posts {
-	article {
-		margin-bottom: 4rem;
-		position: relative;
+  article {
+    margin-bottom: 4rem;
+    position: relative;
 
-		&:before {
-			content: "";
-			position: absolute;
-			bottom: -2rem;
-			left: 0;
-			background: darken(white, 10%);
-			height: 2px;
-			width: 60px;
-		}
+    &:before {
+      content: "";
+      position: absolute;
+      bottom: -2rem;
+      left: 0;
+      background: darken(white, 10%);
+      height: 2px;
+      width: 60px;
+    }
 
-		a {
-			text-decoration: none;
+    a {
+      text-decoration: none;
 
-			&:hover {
-				text-decoration: underline;
-			}
-		}
+      &:hover {
+        text-decoration: underline;
+      }
+    }
 
-		.date {
-			color: lighten(black, 50%);
-			font-family: $sans-serif;
-			font-weight: 300;
-			font-size: 0.8em;
-		}
+    .date {
+      color: lighten(black, 50%);
+      font-family: $sans-serif;
+      font-weight: 300;
+      font-size: 0.8em;
+    }
 
     .meta {
-			color: lighten(black, 50%);
-			font-family: $sans-serif;
-			font-weight: 300;
-			font-size: 0.8em;
+      color: lighten(black, 50%);
+      font-family: $sans-serif;
+      font-weight: 300;
+      font-size: 0.8em;
       margin: 0;
     }
 
-		h3 {
-			margin: 0 0 0.5em;
-		}
-	}
+    h3 {
+      margin: 0 0 0.5em;
+    }
+  }
 }
 
 /***************
@@ -527,21 +601,21 @@ DARK THEME STYLING
 ***************/
 
 @media (prefers-color-scheme: dark) {
-	body {
-		background-color: $black;
-		color: white;
-	}
+  body {
+    background-color: $black;
+    color: white;
+  }
 
-	.posts article .date {
-		color: white;
-	}
+  .posts article .date {
+    color: white;
+  }
 
-	.postNav {
-		border-top: 1px solid lighten(black, 10%);
-		border-bottom: 1px solid lighten(black, 10%);
-	}
+  .postNav {
+    border-top: 1px solid lighten(black, 10%);
+    border-bottom: 1px solid lighten(black, 10%);
+  }
 
-	.footer .container {
-		border-top-color: lighten(black, 10%);
-	}
+  .footer .container {
+    border-top-color: lighten(black, 10%);
+  }
 }
