--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -11,7 +11,7 @@ title: Nolan Can Read
     <h3>
       <a class="post-link" href="{{ post.url }}">{{ post.title }}</a>
     </h3>
-    <p class="meta">By {{ post.author }}</p>
+    <p class="meta">By <a href="/author/{{post.author | simple_slug }}">{{ post.author }}</a></p>
     <p class="meta">{{ post.stars | default: 0 | star_rating}}</p>
     <p>
       {%- if post.description -%}{{ post.description }}{%- else -%}{{
