--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
   <header>
     <h1 class="postTitle">{{ page.title }}</h1>
     <p class="meta">{{ page.stars | default: 0 | star_rating }}</p>
-    <p class="meta">{{page.author }} | Read on {{ page.date | date: '%B %d, %Y' }}</p>
+    <p class="meta"><a href="/author/{{page.author | simple_slug }}">{{page.author }}</a> | Read on {{ page.date | date: '%B %d, %Y' }}</p>
   </header>
 
   {{ content }}
