--- a/_includes/head.html
+++ b/_includes/head.html
@@ -75,7 +75,7 @@
 	<!-- Stylesheet -->
 	<link rel="stylesheet" href="/assets/css/style.css" />
   <!-- FontAwesome I Guess -->
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/dd61a48034.js" crossorigin="anonymous"></script>
 
 	<!-- Canonical URL -->
 	<link
