--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,6 +21,7 @@
 @import "modules/tables";
 @import "modules/syntax";
 @import "modules/bookshelf";
+@import "modules/chart";
 
 // Mobile up base styles
 @import "breakpoints/mobileup";
